force-app/main/default/objects/Lead/fields/Matched_Account__c.field-meta.xml
<CustomField>
  <fullName>Matched_Account__c</fullName>
  <label>Matched Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Matched Accounts</relationshipLabel>
  <relationshipName>MatchedAccountLead</relationshipName>
</CustomField>