force-app/main/default/objects/Lead/fields/Recommended_Routing_Group__c.field-meta.xml
<CustomField>
  <fullName>Recommended_Routing_Group__c</fullName>
  <label>Recommended Routing Group</label>
  <type>Lookup</type>
  <referenceTo>Routing_Group__c</referenceTo>
  <relationshipLabel>Recommended Routing Groups</relationshipLabel>
  <relationshipName>RecommendedRoutingGroupLead</relationshipName>
</CustomField>