force-app/main/default/objects/Lead/fields/Routing_Evaluated_At__c.field-meta.xml
<CustomField>
  <fullName>Routing_Evaluated_At__c</fullName>
  <label>Routing Evaluated At</label>
  <type>DateTime</type>
</CustomField>